[package]
name = "pfbox_procedure"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0.147"
serde_derive = "1.0.147"
toml = "0.5.9"
GSL = "4.0" # GSL https://docs.rs/GSL/latest/rgsl/index.html